# StarTux

./: .gitignore  README.md
.cache/clangd/index/: _fixes.hpp.2AC4524E660886EA.idx  _matrix_vectorize.hpp.C977A1B5A27A074E.idx  _noise.hpp.E5B82DA30112C82A.idx  _vectorize.hpp.82DC7F613EC81C58.idx  bitfield.hpp.54BE4AE1D509C277.idx  bitfield.inl.08ED473F4231CA5C.idx  camera.cpp.6CEE06A3D3B9F738.idx  camera.h.DAF3224EC01A9B44.idx  cocoa_init.m.0C91CA31B08103C6.idx  cocoa_joystick.h.A19085F2EDB0A8CE.idx  cocoa_joystick.m.52304E5CB3FF6EBD.idx  cocoa_monitor.m.99F8668BA07D9789.idx  cocoa_platform.h.273508C6147E79A5.idx  cocoa_time.c.81E23D031DDCCD17.idx  cocoa_time.h.CC682991F80F8090.idx  cocoa_window.m.20368A6FFFCF8431.idx  color_space.hpp.EE5CD93123A5F93A.idx  color_space.inl.C09EAFA6FB7D6EA4.idx  common.hpp.258FE68BD5A14DF1.idx  compute_common.hpp.E201B239A44DFFF5.idx  compute_vector_relational.hpp.605B977C8196F16E.idx  constants.hpp.90D24A2FADE39673.idx  constants.inl.3B05D4E5FC00512B.idx  context.c.303F3D898DD8C0E7.idx  cylinder.cpp.DD2EDBBD430FC831.idx  cylinder.h.0A4FB276CF459A8A.idx  egl_context.c.470F9E3ADB2944AF.idx  epsilon.hpp.8E105EE353B313B9.idx  epsilon.inl.FB48D1C901BB65A7.idx  exponential.hpp.5F79D2FCC93F6243.idx  ext.hpp.1ADD67605400D387.idx  func_common.inl.D276EC6F224D5E9C.idx  func_exponential.inl.3A4CC44208E8286E.idx  func_geometric.inl.B432F443CD2AB244.idx  func_integer.inl.C9434A75FF927049.idx  func_matrix.inl.FBC76A803B081C68.idx  func_packing.inl.6958FCB65C241AD0.idx  func_trigonometric.inl.6A85CDCD669AE21C.idx  func_vector_relational.inl.3189A3B85E02ACF1.idx  fwd.hpp.7B364B66F757C300.idx  (+302 more)
Project/: .gitignore  CMakeLists.txt  Makefile  compile_commands.json
Project/.cache/clangd/index/: ParticleSystem.cpp.04DEF126C2CDEF12.idx  ParticleSystem.h.C5BC3A391D69E58A.idx  _fixes.hpp.CE67C3ABA2F2B544.idx  _matrix_vectorize.hpp.B0B39A636A7DCFA6.idx  _noise.hpp.463B2A082D97DDFE.idx  _vectorize.hpp.704708076CFA189B.idx  asteroid.cpp.125379EE73E88165.idx  asteroid.h.14269A7EE7BB8CC6.idx  bitfield.hpp.5DE5FDA8628FC165.idx  bitfield.inl.D61033FACE6C6E36.idx  camera.cpp.914A24BA4B31E252.idx  camera.h.38CA07D75850A09D.idx  color_space.hpp.BA91C2746AE2FEA3.idx  color_space.inl.48FCDA818D7001BD.idx  common.hpp.33317E0FE8B7B0D6.idx  compute_common.hpp.147CDB3DFF386E90.idx  compute_vector_relational.hpp.3CD0BAEBCDB2D280.idx  constants.hpp.C4E0802E7FCE9ED3.idx  constants.inl.1DE6BB81FA4A9C4B.idx  context.c.130356AD5A0A0AAA.idx  dual_quaternion.hpp.2D6DF4B5CE1DD87E.idx  dual_quaternion.inl.369C88972DE52639.idx  egl_context.c.619C20B1650EBB83.idx  epsilon.hpp.B4058DAFE953343D.idx  epsilon.inl.7C50EBCCBD3CA2DE.idx  exponential.hpp.273F7C34A61A773F.idx  ext.hpp.37627F95A3F9AAF6.idx  func_common.inl.27205FA46B1561A2.idx  func_exponential.inl.7771FDF08757C41B.idx  func_geometric.inl.72CAC1D667818C47.idx  func_integer.inl.4813032B2219AE23.idx  func_matrix.inl.0D3E3C025F5F1365.idx  func_packing.inl.44AD980EE3006F2A.idx  func_trigonometric.inl.C96934452B8001EA.idx  func_vector_relational.inl.6EBA1E0373E8BF65.idx  fwd.hpp.5F0764C02C4D23D2.idx  game.cpp.13CE660C59C32D75.idx  game.h.833A0D1BE9982000.idx  geometric.hpp.E255BB4ADDBF9624.idx  glew.c.7F1FEC0404BEB625.idx  (+317 more)
Project/include/: camera.h  game.h  global.h  hud.h  interface.h  node.h  player.h  shape.h  shape_model.h  startup_screen.h  viewer.h
Project/include/game/: asteroid.h  game.h  light_projectile.h  particle_system.h  player.h  projectile.h
Project/include/graphics/: shader.h  texture.h
Project/include/interfaces/: hud.h
Project/shaders/: image.vert  imge.frag  phong.frag  ship.frag  ship.vert
Project/src/: camera.cpp  game.cpp  hud.cpp  main.cpp  node.cpp  player.cpp  shape_model.cpp  startup_screen.cpp  texture.cpp  textured_sphere.cpp  viewer.cpp
Project/src/game/: asteroid.cpp  camera.cpp  game.cpp  light_projectile.cpp  particle_system.cpp  player.cpp  projectile.cpp
Project/src/graphics/: shader.cpp  texture.cpp
Project/src/interfaces/: hud.cpp  interface.cpp  startup_screen.cpp
Project/src/shapes/: shape.cpp  shape_model.cpp
Project/textures/: starTuxlogo4.psd  start_banner.psd
